# kaggle-yelp-restaurant-photo-classification

./: README.md  bis_avg.py  classifier_chain.py  clust.py  compress.py  ensemble.py  nn_joint.py  nn_wrapper.py  online_compress_21k.py  online_compress_50k.py  pixel_sampling.py  pool.py  predict_test.py  save_folds.py  single.py  test_weighting.py  train_yelp.py  vis.py  vis_biz.py  weights.py
cpp/feature_extractor/: CMakeLists.txt  clust.cpp  fisher.cpp  main.cpp  vlad.cpp
model/: predict.py  preprocessing.py
model/21k/: predict_21k.py  predict_21k_-1.py  predict_21k_-2.py
model/fb.resnet.torch/: extract.lua
